@@ -1,3 +1,8 @@
+46.alpha
+========
+
+- Fix scrollbars disappearing under certain conditions
+
 45.2
 ====
 
